@@ -1,3 +1,12 @@
+2006-01-27  Alan Hourihane  <alanh@fairlite.demon.co.uk>
+
+	* configure.ac:
+	* src/trident.h:
+	* src/trident_dac.c: (TridentInit), (TridentRestore),
+	(TridentSave), (TridentHWCursorInit):
+	* src/trident_driver.c: (TRIDENTPreInit), (TRIDENTModeInit):
+	Add XGI (aka Trident) Volari XP5 support
+
 2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
